src/test/deca/syntax/invalid/added/just_SEMI.deca
// Description:
//    Programme minimaliste avec juste ;.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    le lexer ne doit pas relever d'erreur
//
// Historique:
//    cree le 21/12/2024

;